<resources>
    <string name="com_auth0_client_id">Qn3m8FuLIXKQA1gLfNJeQf6azAMYWKjA</string>
    <string name="com_auth0_domain">dev-s8qwnnguwcupqg2o.us.auth0.com</string>
    <string name="com_auth0_scheme">demo</string>
    <string name="app_name">SportApp</string>
    <string name="base_api_url">https://apigateway.uniandes-sports.com/</string>
    <string name="eventos_url">https://apigateway.uniandes-sports.com/</string>
    <string name="planes_url">https://apigateway.uniandes-sports.com/</string>
    <string name="indicadores_url_local">http://10.0.2.2:3002/</string>
    <string name="indicadores_url_prd">https://apigateway.uniandes-sports.com/</string>
    <string name="api_gateway_url_local">http://10.0.2.2:3002/</string>
    <string name="crear_entrenamiento_endpoint">crear_entrenamiento/</string>
    <string name="indicadores_endpoint">calcular-indicadores/</string>
    <string name="indicadores_usuario_atletismo_endpoint">consultar_indicadores_usuario_atletismo/</string>
    <string name="indicadores_usuario_ciclismo_endpoint">consultar_indicadores_usuario_ciclismo/</string>
    <string name="entrenamiento_url_local">http://10.0.2.2:3005/</string>
    <string name="entrenamiento_url_prd">https://entrenamientos.uniandes-sports.com/</string>
    <string name="entrenamiento_endpoint">entrenamiento</string>
    <string name="users_endpoint">get_complete_user_movil/</string>
    <string name="get_rutina_alimentacion_movil">get_rutina_alimentacion_movil/</string>
    <string name="get_rutina_descanso_movil">get_rutina_descanso_movil/</string>
    <string name="pausarTextBtn">Pausar</string>
    <string name="reanudarTextBtn">Reanudar</string>
    <string name="iniciar">Iniciar</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="initTimer">00:00:00</string>
    <string name="calorias_activas">Calorías activas</string>
    <string name="calorias_totales">Calorías totales</string>
    <string name="fcm">Frecuencia Cardiaca Maxima FCM</string>
    <string name="ftp">FTP</string>
    <string name="vo2max">VO2 max</string>
    <string name="cadencia">Cadencia</string>
    <string name="potencia">Potencia</string>
    <string name="tiempoContactoSuelo">Tiempo contacto con el suelo</string>
    <string name="longitudZancada">Longitud de zancada</string>
    <string name="temperatura">Temperatura</string>
    <string name="velocidad">Velocidad</string>
    <string name="ascensoTotal">Ascenso total</string>
    <string name="descensoTotal">Descenso total</string>
    <string name="finalizar">Finalizar</string>
    <string name="valor_inicial">0</string>
    <string name="corazon">♥</string>
    <string name="atletismo">Atletismo</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="version">v 2.0.0</string>
    <string name="rutinaAlimenticia">Rutina Alimenticia</string>
    <string name="carbos">Carbohidratos</string>
    <string name="prote">Proteínas</string>
    <string name="grasas">Grasas</string>
    <string name="tsueno">Tiempo de Sueño</string>
    <string name="tmedi">Tiempo de Meditación</string>
    <string name="trela">Tiempo de Relajación</string>
    <string name="rutinaDescanso">Rutina de Descanso</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="ir">Ir</string>

</resources>